--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "alpinejs": "^2.8.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
