--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.1.0"
+    "eslint-config-prettier": "^7.1.0",
+    "tailwind-scrollbar": "^1.2.2"
   }
 }
